--- a/Project.ipynb
+++ b/Project.ipynb
@@ -14,13 +14,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7ebb85c",
+   "cell_type": "markdown",
+   "id": "3202c0bc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Regression"
+    "# Logistic Regression #"
    ]
   },
   {
@@ -305,7 +303,9 @@
    "id": "77b192af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import L "
+   ]
   }
  ],
  "metadata": {
